build with java8 and java11 only.